# django-huey-stubs

./: README.md  pyproject.toml
django_huey-stubs/: __init__.pyi  config.pyi
django_huey-stubs/management/commands/: djangohuey.pyi
